@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.67 2004/03/07 10:20:06 grant Exp $
+# $NetBSD: Makefile,v 1.68 2004/03/27 22:07:32 tron Exp $
 
 .include "../../mail/sendmail/Makefile.common"
 
 PKGNAME=	sendmail-${DIST_VERS}
-PKGREVISION=	2
 COMMENT=	The well known Mail Transport Agent
 
 CONFLICTS+=	postfix-[0-9]*
